Handling of JSON input